// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employer dashboard renders a 'no results' message in the table, and no pagination components when no claims are present 1`] = `
<tr>
  <td
    colSpan={5}
  >
    No applications on file
  </td>
</tr>
`;

exports[`Employer dashboard renders a beta info alert if all employers are registered in FINEOS 2`] = `
Array [
  "Our dashboard is in beta. You can now see all the applications you need to review using our new dashboard. Over the next few months, we'll be adding more features to the dashboard so you can easily find and manage paid leave applications. You can ",
  <a
    href="https://www.mass.gov/paidleave-employer-feedback"
    key="1"
    rel="noopener"
    target="_blank"
  >
    use our feedback form
  </a>,
  " to tell us what you think of our new features.",
]
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 1`] = `
<tr
  key="NTN-111-ABS-01"
>
  <th
    data-label="Employee name"
    data-test="employee_name"
    scope="row"
  >
    <Link
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      <a>
        Jane Doe
      </a>
    </Link>
  </th>
  <td
    data-label="Application ID"
    key="fineos_absence_id"
  >
    <Link
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      <a>
        NTN-111-ABS-01
      </a>
    </Link>
  </td>
  <td
    data-label="Organization"
    key="employer_dba"
  >
    Work Inc
  </td>
  <td
    data-label="Employer ID number"
    key="employer_fein"
  >
    12-3456789
  </td>
  <td
    data-label="Application start date"
    key="created_at"
  >
    1/15/2021
  </td>
  <td
    data-label="Status"
    key="status"
  >
    <AbsenceCaseStatusTag
      status="Approved"
    />
  </td>
</tr>
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 2`] = `
<thead>
  <tr>
    <th
      key="employee_name"
      scope="col"
    >
      Employee name
    </th>
    <th
      key="fineos_absence_id"
      scope="col"
    >
      Application ID
    </th>
    <th
      key="employer_dba"
      scope="col"
    >
      Organization
    </th>
    <th
      key="employer_fein"
      scope="col"
    >
      Employer ID number
    </th>
    <th
      key="created_at"
      scope="col"
    >
      Application start date
      <TooltipIcon
        position="bottom"
      >
        When an employee started a new leave application
      </TooltipIcon>
    </th>
    <th
      key="status"
      scope="col"
    >
      Status
    </th>
  </tr>
</thead>
`;

exports[`Employer dashboard renders an alert about claim availability when some employers aren't registered in FINEOS yet 2`] = `
Array [
  "Your account has been verified. It may take up to 15 minutes for our systems to update so that you can log in and review applications. If anyone else on your team needs to review applications, they’ll also need to complete the ",
  <a
    href="https://www.mass.gov/how-to/creating-an-employer-account-to-review-paid-family-and-medical-leave-pfml-applications"
    key="1"
    rel="noopener"
    target="_blank"
  >
    verification process
  </a>,
  ".",
]
`;

exports[`Employer dashboard renders claim rows without links if employer is not registered in FINEOS 1`] = `
<tr
  key="NTN-111-ABS-01"
>
  <th
    data-label="Employee name"
    data-test="employee_name"
    scope="row"
  >
    Jane Doe
  </th>
  <td
    data-label="Application ID"
    key="fineos_absence_id"
  >
    NTN-111-ABS-01
  </td>
  <td
    data-label="Employer ID number"
    key="employer_fein"
  >
    **-***0002
  </td>
  <td
    data-label="Application start date"
    key="created_at"
  >
    1/15/2021
  </td>
  <td
    data-label="Status"
    key="status"
  >
    <AbsenceCaseStatusTag
      status="Approved"
    />
  </td>
</tr>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 1`] = `
<Title>
  Dashboard
</Title>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 2`] = `
<p
  className="margin-y-2"
>
  Applications will not have a status until the Department has made a decision. Applications that don't have a status may require action from you.
</p>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 3`] = `
Array [
  <strong
    key="strong-0"
  >
    “--” or no status:
  </strong>,
  " This leave request may require action from you; otherwise, it is awaiting a decision from DFML.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 4`] = `
Array [
  <strong
    key="strong-0"
  >
    Approved:
  </strong>,
  " DFML has approved this leave request.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 5`] = `
Array [
  <strong
    key="strong-0"
  >
    Closed:
  </strong>,
  " The leave has passed or no action can be taken.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 6`] = `
Array [
  <strong
    key="strong-0"
  >
    Denied:
  </strong>,
  " DFML has denied this leave request.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 7`] = `
<Details
  label="Status descriptions"
>
  <ul
    className="usa-list"
  >
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_none"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_approved"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_closed"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_denied"
      />
    </li>
  </ul>
</Details>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 8`] = `
<PaginationSummary
  pageOffset={1}
  pageSize={25}
  totalRecords={75}
/>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 9`] = `
<PaginationNavigation
  onClick={[Function]}
  pageOffset={1}
  totalPages={3}
/>
`;

exports[`Employer dashboard when employerShowVerifications flag is enabled renders instructions if there are no verified employers 1`] = `
Array [
  "You have not verified any organizations. ",
  <a
    href="/employers/organizations"
    key="1"
  >
    Complete this process
  </a>,
  " to review applications.",
]
`;
